<resources>
    <string name="app_name">Calculator</string>
    <string name="btn_delete">DEL</string>
    <string name="btn_devide">\u00F7</string>
    <string name="btn_multiply">x</string>
    <string name="btn_subtraction">-</string>
    <string name="btn_add">+</string>
    <string name="btn_percent">%</string>
    <string name="btn_9">9</string>
    <string name="btn_6">6</string>
    <string name="btn_3">3</string>
    <string name="btn_equal">=</string>
    <string name="btn_pos_neg">+/-</string>
    <string name="btn_8">8</string>
    <string name="btn_5">5</string>
    <string name="btn_2">2</string>
    <string name="btn_decimal">.</string>
    <string name="btn_clear">C</string>
    <string name="btn_7">7</string>
    <string name="btn_4">4</string>
    <string name="btn_1">1</string>
    <string name="btn_0">0</string>
    <string name="btn_about_return">Back</string>
    <string name="txt_history" />
    <string name="btn_history_back">BACK</string>
    <string name="textView5" />
    <string name="txtMyName">Student name: Bahman Ghassemieh</string>
    <string name="txtVersion">Version 1.0</string>
    <string name="txtDate">23-Feb-2019</string>
    <string name="txtProjectName">Interactive Calculator</string>
    <string name="txtEmailMe">email me</string>
    <string name="txt_project_name">Interactive Calculator</string>
</resources>
